# minipaste

./: Dockerfile  LICENSE  Main.hs  README.md  cabal.config  default.nix  minipaste.cabal  shell.nix  stack.yaml
src/: Api.hs  Config.hs  Database.hs  Main.hs  Paste.hs  Util.hs
