name:                minipaste
version:             0.4.0.0
synopsis:            Minimal pastebin-like service
description:         Minipaste is a small service built on top of scotty, highlighting-kate and hasql
license:             BSD3
license-file:        LICENSE
author:              Julien Tanguy
maintainer:          julien.tanguy@jhome.fr
homepage:   https://github.com/jtanguy/minipaste
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

bug-reports:         https://github.com/jtanguy/minipaste/issues

source-repository head
    type:       git
    branch:     master
    location:   git://github.com/jtanguy/minipaste.git

executable minipaste
  hs-source-dirs:      src
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8,
                       uuid >=1.3,
                       bytestring >=0.10 && <0.11,
                       mtl,
                       hasql >= 0.4,
                       hasql-postgres,
                       highlighting-kate,
                       blaze-html,
                       text,
                       http-types,
                       time,
                       old-locale,
                       transformers,
                       scotty
  default-language:    Haskell2010
