name:                minipaste
version:             0.6.0.0
synopsis:            Minimal pastebin-like service
description:         Minipaste is a small service built on top of scotty, highlighting-kate and hasql
license:             BSD3
license-file:        LICENSE
author:              Julien Tanguy
maintainer:          julien.tanguy@jhome.fr
homepage:            https://github.com/jtanguy/minipaste
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

bug-reports:         https://github.com/jtanguy/minipaste/issues

source-repository head
    type:       git
    branch:     master
    location:   git://github.com/jtanguy/minipaste.git

executable minipaste
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7 && <= 4.9,
                       blaze-html >= 0.7,
                       bytestring >=0.10,
                       hasql >= 0.7,
                       hasql-postgres >= 0.8,
                       highlighting-kate >= 0.5,
                       http-types >= 0.8,
                       mtl >= 2.1,
                       old-locale >= 1.0,
                       text >= 1.2,
                       time >= 1.5,
                       transformers >= 0.3,
                       uuid >=1.3,
                       template-haskell,
                       servant,
                       servant-blaze,
                       servant-server,
                       wai,
                       warp,
                       aeson,
                       either
  default-language:    Haskell2010
